# SLiM-Eval

./: .gitignore  CHANGELOG.md  README.md  compressor.py  final_ver.py  first_experiment.ipynb  llama3.2_all_precisions_latency_memory.csv  main.py  pyproject.toml  release-please-config.json  requirements-analyze.txt  requirements-full.txt  requirements.txt  run_slim_eval.py  slimeval.py  temp.txt  working_file.ipynb  z_commands.txt
.github/workflows/: python-publish.yml  release-please.yml
analysis_results/: complete_results.json  executive_summary.txt  quantization_impact.csv  results_table.csv  results_table.tex  summary_statistics.csv
initial_v00/: energy_monitor.py  evaluate_model.py  requirements.txt  run_evaluation.sh
outputs/Mistral-7B-Instruct-v0.3/Mistral-7B-Instruct-v0.3_fp16/: energy.json  gsm8k.json  hellaswag.json  mmlu.json  mmlu_abstract_algebra.json  mmlu_anatomy.json  mmlu_astronomy.json  mmlu_business_ethics.json  mmlu_clinical_knowledge.json  mmlu_college_biology.json  mmlu_college_chemistry.json  mmlu_college_computer_science.json  mmlu_college_mathematics.json  mmlu_college_medicine.json  mmlu_college_physics.json  mmlu_computer_security.json  mmlu_conceptual_physics.json  mmlu_econometrics.json  mmlu_electrical_engineering.json  mmlu_elementary_mathematics.json  mmlu_formal_logic.json  mmlu_global_facts.json  mmlu_high_school_biology.json  mmlu_high_school_chemistry.json  mmlu_high_school_computer_science.json  mmlu_high_school_european_history.json  mmlu_high_school_geography.json  mmlu_high_school_government_and_politics.json  mmlu_high_school_macroeconomics.json  mmlu_high_school_mathematics.json  mmlu_high_school_microeconomics.json  mmlu_high_school_physics.json  mmlu_high_school_psychology.json  mmlu_high_school_statistics.json  mmlu_high_school_us_history.json  mmlu_high_school_world_history.json  mmlu_human_aging.json  mmlu_human_sexuality.json  mmlu_humanities.json  mmlu_international_law.json  (+26 more)
outputs/llama-3.2-3B-instruct/: complete_results.csv
scripts/: commands.txt  run_slim_eval.py
slim_eval/: __init__.py  analysis.py  cli.py  evaluator.py  quantization.py  utils.py
slim_eval/benchmarks/: __init__.py  accuracy.py  base.py  energy.py  performance.py
trials/alpha/: commands.txt  run_slim_eval.py
trials/v1/: working_file_v1.ipynb
trials/v2/: energy_profiler.py  quantization_experiments.py  slim_eval.py
trials/v3/: adaptive_benchmark.py  distributed_benchmark.py  slim_eval.py
trials/v5/: enterprise_framework.py
trials/v6/: ml_optimization_engine.py
trials/v7/: advanced_analytics.py  benchmark_orchestrator.py  model_optimization_suite.py  visualization_engine.py
(+365 files in other folders)
